--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="tiff.min.js"></script>
     <script type="text/javascript" src="nifti-reader.js"></script>
     <script type="text/javascript" src="jquery-csv.js"></script>
+    <script src="opencv.js" type="text/javascript"></script>
 
     <link rel="stylesheet" href="layout.css" />
     <script type='module' src="index.js"></script>
