--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,12 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
+    <!-- Include TensorFlow -->
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
+
     <script type="text/javascript" src="tiff.min.js"></script>
     <script type="text/javascript" src="nifti-reader.js"></script>
     <script type="text/javascript" src="jquery-csv.js"></script>
-    <script src="opencv.js" type="text/javascript"></script>
 
     <link rel="stylesheet" href="layout.css" />
     <script type='module' src="index.js"></script>
